# sarjy

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: booking.py  calendar_client.py  config.py  flow.py  llm.py  main.py  memory.py  shop.py
docs/: PRD.md
evals/: harness.py  run_evals.py  scenarios.py
static/: index.html
