[project]
name = "sarjy"
version = "0.1.0"
description = "Voice assistant that books barbershop appointments"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-ai-slim[google]",
    "pydantic-settings",
    "google-api-python-client",
    "google-auth",
    "httpx",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["googleapiclient.*", "google.oauth2.*"]
ignore_missing_imports = true
